--- a/_config.yml
+++ b/_config.yml
@@ -256,14 +256,12 @@ defaults:
     values:
       layout: single
       author_profile: false
-  # _posts
+  # entertainment
   - scope:
       path: ""
-      type: posts
+      type: entertainment
     values:
       layout: single
-      author_profile: true
-      read_time: true
-      comments: # true
+      author_profile: false
       share: true
-      related: true
+      comment: false
