--- a/_config.yml
+++ b/_config.yml
@@ -245,7 +245,7 @@ compress_html:
 collections:
   entertainment:
     output: true
-    permalink: /entertainment/:collection/:path/
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
